fixed some layout issues

--- a/frontend/admin/index.css
+++ b/frontend/admin/index.css
@@ -16,7 +16,7 @@
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   width: 100vw;
   min-height: 100dvh;
 }
@@ -48,7 +48,9 @@ header {
 
 .bodyContent {
   display: flex;
-  flex-direction: row wrap;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: space-around;
 }
 
 main {
@@ -162,5 +164,17 @@ button.submit {
   }
   100% {
     background-position: -100% 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .bodyContent {
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 1279px) {
+  .body {
+    align-items: center;
   }
 }
